--- a/HW3_MinVar_Portfolio.ipynb
+++ b/HW3_MinVar_Portfolio.ipynb
@@ -36,8 +36,7 @@
         "id": "title-cell"
       },
       "source": [
-        "# Homework 3 — Minimum Variance Portfolio Backtest\n",
-        "**Prof. Lorenzo Naranjo | Spring 2026**\n",
+        "Minimum Variance Portfolio Backtest\n",
         "\n",
         "This notebook implements a long-only minimum variance portfolio strategy and backtests it on the CRSP universe of stocks. We compare performance against the CRSP value-weighted market index, analyze risk-adjusted returns, and run a Fama-French five-factor regression."
       ]
@@ -62,7 +61,7 @@
       },
       "outputs": [],
       "source": [
-        "# Install WRDS library (needed in Colab)\n",
+        "# Install WRDS library\n",
         "!pip install wrds -q"
       ]
     },
@@ -120,7 +119,7 @@
         "---\n",
         "## 1. Download Data from WRDS\n",
         "\n",
-        "We download monthly CRSP stock data and the CRSP value-weighted market index. The CRSP screen keeps only ordinary common shares (`shrcd` 10–11) listed on NYSE, AMEX, or NASDAQ (`exchcd` 1–3)."
+        "We download monthly CRSP stock data and the CRSP value-weighted market index."
       ]
     },
     {
@@ -151,7 +150,7 @@
         }
       ],
       "source": [
-        "# Connect to WRDS — you will be prompted for your username and password\n",
+        "# Connect to WRDS\n",
         "conn = wrds.Connection()"
       ]
     },
@@ -239,7 +238,7 @@
         "---\n",
         "## 2. Prepare the Data\n",
         "\n",
-        "We construct pivot tables of returns and market capitalizations. Market cap is computed as |price| × shares outstanding (in millions)."
+        "We construct pivot tables of returns and market capitalizations. Market cap is computed as (price) × shares outstanding (in millions)."
       ]
     },
     {
@@ -436,7 +435,7 @@
         }
       ],
       "source": [
-        "# Load from parquet (useful if re-running without re-downloading)\n",
+        "# Load from parquet\n",
         "crsp_m = pd.read_parquet('crsp_msf_1963_2025.parquet')\n",
         "crsp_vw = pd.read_parquet('crsp_msi_vwretd_1963_2025.parquet')\n",
         "\n",
@@ -469,7 +468,7 @@
         "\n",
         "$$\\min_{w} \\; \\frac{1}{2} w^\\top \\Sigma w \\quad \\text{s.t.} \\quad w \\geq 0, \\; \\mathbf{1}^\\top w = 1$$\n",
         "\n",
-        "At each iteration we take a gradient step and then project back onto the **unit simplex** (the feasible set), enforcing both constraints simultaneously. See **Question 6** for a detailed explanation."
+        "At each iteration we take a gradient step and then project back onto the **unit simplex** (the feasible set), enforcing both constraints simultaneously."
       ]
     },
     {
@@ -645,7 +644,7 @@
         "---\n",
         "## 5. Run All Backtests\n",
         "\n",
-        "We run backtests for three universe sizes (top 100, 500, 1000 stocks by market cap). This cell is the most **computationally intensive** — expect it to take 15–45 minutes on Colab depending on the universe size."
+        "We run backtests for three universe sizes (top 100, 500, 1000 stocks by market cap)."
       ]
     },
     {
